--- a/index.htm
+++ b/index.htm
@@ -53,16 +53,16 @@
     <div id="c-slider">
         <div id="slider">
             <section>
-                <img src="4%20de%20marzo.jpg" alt="">
+                <img src="4%20de%20marzo.jpg" alt=""class="slider__img>
             </section>
             <section>
-                <img src="maiden.jpg" alt="">
+                <img src="maiden.jpg" alt=""class="slider__img>
             </section>
             <section>
-                <img src="40%20a%C3%B1os.jpg" alt="">
+                <img src="40.jpg" alt=""class="slider__img>
             </section>
             <section>
-                <img src="the%20book%20of%20souls%20cover.jpg" alt="">
+                <img src="the%20book%20of%20souls%20cover.jpg" alt=""class="slider__img>
             </section>
         </div>
         <div id="btn-prev">&#60;</div>
