--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
 </head>
 
 <body background="ladrillo.jpg">
-    <img id="portada" src="Banner%20IMM.jpg" alt="Iron Maiden México">
+    <img id="portada" src="Banner%20IMM1.jpg" alt="Iron Maiden México">
     
     <table BGColor ="black" width="90%"	border="3" >
         <tr>
