--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,7 @@
         <tr>
             <th> HOME</th>
             <th>NOTICIAS</th>
-            <th><A HREF ="discografia.html">DISCOGRAFIA</a></th> 
+            <th><A HREF ="discografia.htm">DISCOGRAFIA</a></th> 
             <th>MERCANCIA</th>
             <th>CONTACTO</th>
         
