--- a/discografia.htm
+++ b/discografia.htm
@@ -42,9 +42,9 @@
     
     <table id=menu width="90%"	border="3" >
         <tr>
-            <th> HOME</th>
+            <th> <a href="index.htm"> HOME</a</th>
             <th>NOTICIAS</th>
-            <th>DISCOGRAFIA</th>
+            <th><A HREF ="discografia.htm">DISCOGRAFIA</a></th> 
             <th>MERCANCIA</th>
             <th>CONTACTO</th>
         
@@ -52,12 +52,12 @@
     </table>
 	<br><br><br>
 	<table  align="center" border=0 cellspacing=1 cellpadding=1>
-    <td>
-	<table  align="center" border=0 cellspacing=1 cellpadding=1  BACKGROUND="imagenes/1.jpg" WIDTH ="200" HEIGHT="200">
+    <td><A HREF ="IronMaiden.html">
+	<table  align="center" border=0 cellspacing=1 cellpadding=1  BACKGROUND="imagenes/1.jpg" WIDTH ="200" HEIGHT="200"> </a>
 	</table>
 	</td>
     <td>
-	<table  align="center" border=0  cellspacing=1 cellpadding=1  BACKGROUND="imagenes/ladrillo2.jpg" WIDTH ="400" HEIGHT="200">
+	<table  BACKGROUND="imagenes/ladrillo2.jpg" align="center" border=0  cellspacing=1 cellpadding=1   WIDTH ="400" HEIGHT="200"> </a>
 	<td>
 	<font color ="black">
 	<h4>IRON MAIDEN (14 Abril 1980) </h4>
