--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html lang="es-mx">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="estilos.css">
+<link rel="stylesheet" href="css/estilos.css">
 <script src="jquery-3.1.1.min.js" type="text/javascript"></script>
 <title>Iron Maiden México</title>   
     <style>
@@ -42,7 +42,7 @@
     
     <table id=menu width="90%"	border="3" >
         <tr>
-            <th> HOME</th>
+            <th> <a href="index.htm"> HOME</a</th>
             <th>NOTICIAS</th>
             <th><A HREF ="discografia.htm">DISCOGRAFIA</a></th> 
             <th>MERCANCIA</th>
