--- a/Prowler.html
+++ b/Prowler.html
@@ -37,8 +37,8 @@
     
 </head>
 
-<body background="imagenes/ladrillo.jpg">
-    <img id="portada" src="imagenes/bannerIMM.jpg" alt="Iron Maiden México">
+<body background="Imagenes/ladrillo.jpg">
+    <img id="portada" src="Imagenes/bannerIMM.jpg" alt="Iron Maiden México">
         <table id=menu width="90%"	border="3" >
         <tr>
             <th> <a href="index.htm"> HOME</a</th>
@@ -51,11 +51,13 @@
     </table>
 		<table  align="center" border=0 cellspacing=1 cellpadding=1>
 		    <td><A HREF ="IronMaiden.html">
-	<table  align="center" border=0 cellspacing=1 cellpadding=1  BACKGROUND="imagenes/1.jpg" WIDTH ="200" HEIGHT="200"> </a>
+			<br><br><br><br>
+	<table  align="center" border=0 cellspacing=1 cellpadding=1  BACKGROUND="Imagenes/1.jpg" WIDTH ="200" HEIGHT="200"> </a>
 	</table>
 	</td>
     <td>
-	<table  BACKGROUND="imagenes/ladrillo2.jpg" align="center" border=0  cellspacing=1 cellpadding=1   WIDTH ="350" HEIGHT="200"> </a>
+	<br><br><br>
+	<table  BACKGROUND="Imagenes/ladrillo2.jpg" align="center" border=0  cellspacing=1 cellpadding=1   WIDTH ="350" HEIGHT="200"> </a>
 	<td>
 	<font color ="black">
 	<h4>IRON MAIDEN (14 Abril 1980) </h4>
@@ -74,7 +76,7 @@
 	<br><br><br><br>
 	<table  align="center" border=0 cellspacing=1 cellpadding=1>
     <td>
-	<table  align="center" border=0 cellspacing=1 cellpadding=1  BACKGROUND="imagenes/ladrillo2.jpg" WIDTH ="400" HEIGHT="450">
+	<table  align="center" border=0 cellspacing=1 cellpadding=1  BACKGROUND="Imagenes/ladrillo2.jpg" WIDTH ="400" HEIGHT="450">
 	<tr>
 	<td>
 	<P ALIGN=center>
@@ -99,7 +101,7 @@ Got me feeling myself and reeling around.
   </font></p></td></tr></table>
 	</td>
     <td>
-	<table  align="center" border=0  cellspacing=1 cellpadding=1 BACKGROUND="imagenes/ladrillo2.jpg" WIDTH ="400" HEIGHT="450">
+	<table  align="center" border=0  cellspacing=1 cellpadding=1 BACKGROUND="Imagenes/ladrillo2.jpg" WIDTH ="400" HEIGHT="450">
 	<tr>
 	<td> 
 	<P ALIGN=center>
@@ -125,7 +127,7 @@ Estoy hablando, pero nada conmigo <br>
 Estoy sintiendome a mi mismo y tambaleando </td>
 	</p> </font> </tr> </table> </td></tr></table> 
 	<br><br>
-<table  align="center" border=0  cellspacing=1 cellpadding=1 BACKGROUND="imagenes/ladrillo2.jpg" WIDTH ="1000" HEIGHT="400">
+<table  align="center" border=0  cellspacing=1 cellpadding=1 BACKGROUND="Imagenes/ladrillo2.jpg" WIDTH ="1000" HEIGHT="400">
 
 </table>
 <P ALIGN=center>
