--- a/Discografia/IronMaiden.html
+++ b/Discografia/IronMaiden.html
@@ -61,14 +61,14 @@
 	<font color ="black">
 	<h4>IRON MAIDEN (14 Abril 1980) </h4>
 	<OL>
-		<LI> <a href="Prowler.html">Prowler</a>
-		<LI> Remember Tomorrow
-		<LI> Running Free
-		<LI> Phantom of the Opera
-		<LI> Transylvania (Instrumental)
-		<LI> Strange World
-		<LI> Charlotte the Harlot
-		<LI> Iron Maiden
+		<LI> <a href="Prowler.html"> Prowler</a>
+		<LI> <a href="RememberTomorrow.html"> Remember Tomorrow</a>
+		<LI> <a href="RunningFree.html"> Running Free</a>
+		<LI> <a href="PhantomOfTheOpera.html"> Phantom of the Opera</a>
+		<LI> <a href="Transylvania.html"> Transylvania (Instrumental)</a>
+		<LI> <a href="StrangeWorld.html"> Strange World</a>
+		<LI> <a href="CharlotteTheHarlot.html"> Charlotte the Harlot</a>
+		<LI> <a href="IronMaiden2.html"> Iron Maiden</a>
 	</OL>
 	</font> </td> </table> </td> </tr>
 	</table> 
