--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,7 @@
         <tr>
             <th> <a href="index.htm"> HOME</a</th>
             <th>NOTICIAS</th>
-            <th><A HREF ="discografia.htm">DISCOGRAFIA</a></th> 
+            <th><A HREF ="Discografia/Discografia.htm">DISCOGRAFIA</a></th> 
             <th>MERCANCIA</th>
             <th>CONTACTO</th>
         
