--- a/RememberTomorrow.html
+++ b/RememberTomorrow.html
@@ -30,7 +30,7 @@
         }
         
         #menu{
-            background-image: url(imagenes/metal2.jpg);
+            background-image: url(Imagenes/metal2.jpg);
         }
     </style>
     
