--- a/index.htm
+++ b/index.htm
@@ -38,13 +38,13 @@
 </head>
 
 <body background="Imagenes/ladrillo.jpg">
-    <img id="portada" src="Imagenes/BannerIMM.jpg" alt="Iron Maiden México">
+    <img id="portada" src="Imagenes/bannerIMM.jpg" alt="Iron Maiden México">
     
     <table id=menu width="90%"	border="3" >
         <tr>
             <th> <a href="index.htm"> HOME</a</th>
             <th>NOTICIAS</th>
-            <th><A HREF ="Discografia/Discografia.htm">DISCOGRAFIA</a></th> 
+            <th><A HREF ="Discografia.htm">DISCOGRAFIA</a></th> 
             <th>MERCANCIA</th>
             <th>CONTACTO</th>
         
