--- a/Discografia.htm
+++ b/Discografia.htm
@@ -12,7 +12,7 @@
         }
         
         body{
-            background-image: url(imagenes/ladrillo.jpg);
+            background-image: url(Imagenes/ladrillo.jpg);
             background-attachment: fixed;
             background-repeat: no-repeat;
         }
