--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <title>Iron Maiden México</title>   
     <style>
          body{
-            background-image: url(imagenes/ladrillo.jpg); 
+            background-image: url(Imagenes/ladrillo.jpg); 
             background-attachment: fixed;
             background-repeat: no-repeat;
         }
