imagen iron maiden
me falto otra imagen xD

--- a/Discografia.htm
+++ b/Discografia.htm
@@ -64,7 +64,7 @@
 	<table id="discos">
     <tr>
     <td>
-    <a href="IronMaiden.html"><img src="imagenes/1.jpg"></a>
+    <a href="IronMaiden.html"><img src="Imagenes/1.jpg"></a>
 	</td>
         
     <td style="background: url(Imagenes/ladrillo2.jpg)" width=350>
