--- a/PhantomOfTheOpera.html
+++ b/PhantomOfTheOpera.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="estilos.css">
 <script src="jquery-3.1.1.min.js" type="text/javascript"></script>
-<title>Remember Tomorrow</title>   
+<title>Phantom of the Opera</title>   
     <style>
         #portada{
             width: 90%;
@@ -76,57 +76,72 @@
 	<br><br><br><br>
 	<table  align="center" border=0 cellspacing=1 cellpadding=1>
     <td>
-	<table  align="center" border=0 cellspacing=1 cellpadding=1  BACKGROUND="Imagenes/ladrillo2.jpg" WIDTH ="350" HEIGHT="410">
+	<table  align="center" border=0 cellspacing=1 cellpadding=1  BACKGROUND="Imagenes/ladrillo2.jpg" WIDTH ="500" HEIGHT="520">
 	<tr>
 	<td>
 	<P ALIGN=center>
 	<font color ="black"> 
-"Remember Tomorrow"<br>
+"Phantom Of The Opera"<br>
 <br>
-Unchain the colours before my eyes,<br>
-Yesterday's sorrows, tomorrow's white lies.<br>
-Scan the horizon, the clouds take me higher,<br>
-I shall return from out of fire.<br>
+I've been looking so long for you now you won't get away from my grasp.<br>
+You've been living so long in hiding in hiding behind that false mask.<br>
+And you know and I know that you ain't got long now to last.<br>
+Your looks and your feelings are just the remains of your past.<br>
 <br>
-Tears for rememberance, and tears for joy,<br>
-Tears for somebody and this lonely boy.<br>
-Out in the madness, the all seeing eye,<br>
-Flickers above us, to light up the sky.<br>
+You're standing in the wings, there you wait for the curtain to fall.<br>
+Knowing the terror and holding you have on us all.<br>
+Yeah, I know that you're gonna scratch me, maim me and maul.<br>
+You know I'm helpless from your mesmerising cat call.<br>
 <br>
-Unchain the colours before my eyes,<br>
-Yesterday's sorrows, tomorrow's white lies.<br>
-Scan the horizon, the clouds take me higher,<br>
-I shall return from out of fire.
+Keep your distance, walk away, don't take his bait.<br>
+Don't you stray, don't fade away.<br>
+Watch your step, he's out to get you, come what may.<br>
+Don't you stray, from the narrow way.<br>
+<br>
+I'm running and hiding in my dreams you're always there.<br>
+You're the Phantom of the Opera, you're the devil, you're just out to scare.<br>
+You damaged my mind and my soul it just floats through the air.<br>
+Haunt me, you taunt me, you torture me back at your lair.
   </font></p></td></tr></table>
 	</td>
     <td>
-	<table  align="center" border=0  cellspacing=1 cellpadding=1 BACKGROUND="Imagenes/ladrillo2.jpg" WIDTH ="360" HEIGHT="410">
+	<table  align="center" border=0  cellspacing=1 cellpadding=1 BACKGROUND="Imagenes/ladrillo2.jpg" WIDTH ="500" HEIGHT="520">
 	<tr>
 	<td> 
 	<P ALIGN=center>
 	<font color ="black"> 
-"Recuerda Mañana"<br>
+	"Fantasma de la Opera"<br>
+	<br>
+He estado buscando durante tanto tiempo para usted <br>
+ahora que no se saldrá de mi alcance. <br>
+Has estado viviendo tanto tiempo en la clandestinidad <br>
+en esconderse detrás de esa máscara falsa. <br>
+Y usted y yo sabemos que no tienes tiempo ahora a la última. <br>
+Sus miradas y sus sentimientos son sólo los restos de su pasado. <br>
 <br>
-Desencadena los colores delante de mis ojos,<br>
-las penas de ayer, las mentiras blancas de mañana.<br>
-Escudriña el horizonte, las nubes me llevan ams alto,<br>
-Retornare de fuera del fuego.<br>
+Usted está de pie en las alas, hay que esperar a que la <br>
+cortina a caer. <br>
+Sabiendo el terror y la explotación que tiene en todos nosotros. <br>
+Sí, sé que vas a la nada de mí, me mutilan y mutilar. <br>
+Sabes que estoy indefenso de su llamada gato cautivadora. <br>
+Mantenga su distancia, a pie, no tome su cebo. <br>
+No te desvías, no se desvanecen. <br>
+Cuidado con el escalón, está tratando de hacerte daño, pase lo que pase. <br>
+No te desvías, desde el camino angosto. <br>
 <br>
-lagrimas para el recuerdo, y lagrimas para la alegria,<br>
-lagrimas para alguien y este chico solitario.<br>
-Afuera en la locura, el ojo que todo lo ve,<br>
-Parpadea sobre nosotros, para iluminar el cielo.<br>
-<br>
-Desencadena los colores delante de mis ojos,<br>
-las penas de ayer, las mentiras blancas de mañana.<br>
-Escudriña el horizonte, las nubes me llevan mas alto,<br>
-Retornare de fuera del fuego. </td>
+Estoy corriendo y escondiéndose en mis sueños siempre estás ahí. <br>
+Usted es el fantasma de la ópera, eres el diablo, que está <br>
+justo fuera de asustar. <br>
+Usted dañado mi mente y mi alma simplemente flota por el <br>
+aire. <br>
+Me persiguen, se burla de mí, que me torturaron de nuevo <br>
+a su guarida. </td>
 	</p> </font> </tr> </table> </td></tr></table> 
 	<br><br>
 <table  align="center" border=0  cellspacing=1 cellpadding=1 BACKGROUND="Imagenes/ladrillo2.jpg" WIDTH ="1000" HEIGHT="200">
 
 </table>
 <P ALIGN=center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/0fx_SuGJ0Ag" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/h8IuFl3sMhk" frameborder="0" allowfullscreen></iframe></p>
 </body>
 </html>
