--- a/Discografia.htm
+++ b/Discografia.htm
@@ -55,7 +55,7 @@
     </style>
  </head>
 
-<body>
+<body> 2
     <img id="portada" src="Imagenes/bannerIMM.jpg" alt="Iron Maiden México">
     
     <table id=menu width="90%"	border="3">
